[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ConSeqUMI"
version = "0.0.1.3"
authors = [
  { name="Caleb Cranney", email="caleb.cranney.app@gmail.com" },
]
description = "Bioinformatics software package for increasing the accuracy of nanopore sequencing data."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "Bio >= 1.5.5",
    "cutadapt >= 4.1",
    "matplotlib >= 3.5.3",
    "more_itertools >= 9.1.0",
    "numpy >= 1.24.2",
    "pandas >= 1.4.4",
    "PyQt5 >= 5.15.9",
    "pytest >= 7.2.1",
    "python_Levenshtein >= 0.20.9",
    "scipy >= 1.9.1",
]


[project.urls]
"Homepage" = "https://github.com/JGEnglishLab/longread_umi_python"
"Bug Tracker" = "https://github.com/JGEnglishLab/longread_umi_python/issues"

[project.scripts]
conseq = "ConSeqUMI.conseq:main"