[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ConSeqUMI"
version = "1.0.0"
authors = [
  { name="Caleb Cranney", email="caleb.cranney.app@proton.me" },
]
description = "Bioinformatics software package for increasing the accuracy of nanopore sequencing data."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "Bio >= 1.0.2",
    "cutadapt >= 3.7",
    "matplotlib >= 3.3.4",
    "more_itertools >= 8.14.0",
    "numpy >= 1.16.1",
    "pandas >= 1.1.5",
    "PyQt5 >= 5.15.2",
    "pytest >= 7.0.1",
    "python_Levenshtein >= 0.20.9",
    "scipy >= 1.5.4",
]


[project.urls]
"Homepage" = "https://github.com/JGEnglishLab/longread_umi_python"
"Bug Tracker" = "https://github.com/JGEnglishLab/longread_umi_python/issues"

[project.scripts]
conseq = "ConSeqUMI.conseq:main"